Fixed time being off center
The minute text and hour text were not equidistant from the dome. They are now much closer

--- a/appinfo.json
+++ b/appinfo.json
@@ -28,6 +28,7 @@
                 "characterRegex": "[A-Za-z.]",
                 "file": "fonts/Birds.ttf",
                 "name": "FONT_BIRD_40",
+                "trackingAdjust": -1,
                 "type": "font"
             },
             {
