--- a/appinfo.json
+++ b/appinfo.json
@@ -25,7 +25,7 @@
                 "type": "font"
             },
             {
-                "characterRegex": "[A-Za-z.]",
+                "characterRegex": "[A-Za-z.r]",
                 "file": "fonts/Birds.ttf",
                 "name": "FONT_BIRD_40",
                 "trackingAdjust": -1,
